adding  card payments

--- a/frontend/src/styles/Header.css
+++ b/frontend/src/styles/Header.css
@@ -30,3 +30,13 @@ li a {
   text-decoration: none;
   color: white;
 }
+
+
+.header__right ul{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.header__right ul li{
+  padding: 10px 30px;
+}
